--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,19 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github</groupId>
   <artifactId>jdummy</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
+  
+   <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <url>https://github.com/aggumati/jdummy.git</url>
+  </scm>
   
   <dependencies>
   	<dependency>
